...
        android:id="@+id/text_view_new_exercise_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/string_category_colon"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/edit_text_new_exercise_name"
        app:layout_constraintTop_toBottomOf="@id/text_view_new_exercise" />

    <TextView
        android:id="@+id/text_view_new_exercise_category_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_new_exercise_category" />

    <Button
        android:id="@+id/button_save_new_exercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_background"
        android:text="@string/string_save"
        android:textColor="?colorOnSecondary"
...
