...
    <string name="string_add_category">Add Category</string>
    <string name="string_add_exercise">Add Exercise</string>
    <string name="string_category_colon">Category:</string>
    <string name="string_save">Save</string>
    <string name="string_cancel">Cancel</string>
    <string name="string_name">Name</string>
    <string name="string_edit">Edit</string>
    <string name="string_delete">Delete</string>
    <string name="string_options">Options</string>
    <string name="string_confirm">Confirm</string>
    <string name="string_delete_category_desc">Are you sure you want to delete this category and its exercises?</string>
    <string name="string_delete_category">Delete Category</string>
    <string name="string_edit_category">Edit Category</string>
    <string name="string_new_exercise">New Exercise</string>
...
